# TryAlgebraQt

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json  MathDocument.cpp  MathDocument.h  Notes.txt  PixelDataRenderer.cpp  PixelDataRenderer.h  main.cpp  main.qml  vcpkg-configuration.json  vcpkg.json  vulkansquircle.cpp  vulkansquircle.h
Application/: AppGlobal.h  Application.cpp  Application.h  CMakeLists.txt  MathDocument.cpp  MathDocument.h  MathDocumentCanvas.cpp  MathDocumentCanvas.h  MathDocumentWrap.qml
Application/Controls/: DocumentControl.cpp  DocumentControl.h  FilesControl.cpp  FilesControl.h  MenuControl.cpp  MenuControl.h  TabsControl.cpp  TabsControl.h  ToolbarControl.cpp  ToolbarControl.h
Application/MathEditor/: CompatibilityData.h  CursorComponentGenerator.cpp  CursorComponentGenerator.h  MathElementGenerator.cpp  MathElementGenerator.h
Application/MathEditor/Visual/: CaretVisual.cpp  CaretVisual.h  CharVisual.cpp  CharVisual.h  FromToVisual.cpp  FromToVisual.h  MeVisualBase.cpp  MeVisualBase.h
Application/Models/: ApplicationModel.cpp  ApplicationModel.h  DocumentTabModel.cpp  DocumentTabModel.h  DocumentsModel.cpp  DocumentsModel.h  MathElementInfoModel.cpp  MathElementInfoModel.h  MeListModel.cpp  MeListModel.h
Application/Modules/: ImageProvider.h  MeAtlasGenerator.cpp  MeAtlasGenerator.h  MeInfoGenerator.cpp  MeInfoGenerator.h
RawAssets/Atlases/: MathEditorAtlas.json  MathEditorAtlas.tps
tests/: CMakeLists.txt  ConvertMeToTermsTest.h  IsLastLineTest.h  MathDocumentTest.h  Navigation.h  ParseTest.h  PatternMatchingTest.h  Prints.h  SelectionTest.h  StepTest.h  TestFramework.h  TestGlobals.h  TestHelpers.h  TextBufferTest.h  TextPosToMePathTest.h  TryAlgebraTest.cpp  VariatorTest.h
